k8s/app/evaluation-service/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: evaluation-service
spec:
  podSelector:
    matchLabels:
      app: evaluation-service
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8004
